tests/baselines/reference/parser_continueNotInIterationStatement3.errors.txt
==== tests/cases/compiler/parser_continueNotInIterationStatement3.ts (1 errors) ====
    switch (0) {
      default:
        continue;
        ~~~~~~~~~
!!! parser_continueNotInIterationStatement3.ts(3,5): error TS1104: 'continue' statement can only be used within an enclosing iteration statement.
    }